--- a/HMM_based_Modified_Viterbi.ipynb
+++ b/HMM_based_Modified_Viterbi.ipynb
@@ -2143,7 +2143,7 @@
    ],
    "source": [
     "incorrect_tagged_cases = [{ 'prev': val_run_base[i-1], 'predicted': j[0], 'actual': j[1]} for i, j in enumerate(zip(tagged_seq, val_run_base)) if j[0]!=j[1]]\n",
-    "incorrect_tagged_cases"
+    "incorrect_tagged_cases[:10]"
    ]
   },
   {
@@ -2637,7 +2637,7 @@
    ],
    "source": [
     "incorrectly_assigned_tags = [obj['predicted'][1] for obj in incorrect_tagged_cases]\n",
-    "incorrectly_assigned_tags"
+    "incorrectly_assigned_tags[:10]"
    ]
   },
   {
@@ -3853,7 +3853,7 @@
     }
    ],
    "source": [
-    "tagged_test"
+    "tagged_test[:15]"
    ]
   },
   {
@@ -4072,7 +4072,7 @@
    ],
    "source": [
     "# Predictions by Modification 1\n",
-    "tagged_test_1"
+    "tagged_test_1[:15]"
    ]
   },
   {
@@ -4291,7 +4291,7 @@
    ],
    "source": [
     "# Predictions by Modification 2\n",
-    "tagged_test_2"
+    "tagged_test_2[:15]"
    ]
   },
   {
